<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_margin="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/appl_time_txt"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appl_amount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="TextView"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appl_time_txt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/monday"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="M"
                android:tag="@string/monday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appl_time_txt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sunday"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:text="S"
                android:tag="@string/sunday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saturday"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:text="T"
                android:tag="@string/tuesday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/monday"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:text="W"
                android:tag="@string/wednesday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tuesday"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/thursday"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:text="T"
                android:tag="@string/thursday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/wednesday"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/friday"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:text="F"
                android:tag="@string/friday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/thursday"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saturday"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:text="S"
                android:tag="@string/saturday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/friday"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
