<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Refill Reminders">
        <ListPreference
            app:key="reminderDay"
            app:summary="Select the no. of days for refill reminder."
            app:defaultValue="7 days"
            app:entries="@array/refillDays"
            app:entryValues="@array/refillDaysVals"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="Google Calendar">

        <SwitchPreferenceCompat
            app:key="calendar"
            app:title="Enable Google Calendar"
            app:summaryOff="Medication events won't be added to your Google Calendar"
            app:summaryOn="Medication events will be added to your Google Calendar"/>

        <SwitchPreferenceCompat
            app:dependency="calendar"
            app:defaultValue="true"
            app:key="dose_events"
            app:title="Dose Events" />

        <SwitchPreferenceCompat
            app:dependency="calendar"
            app:defaultValue="true"
            app:key="refill_reminders"
            app:title="Refill Reminders" />

    </PreferenceCategory>


</PreferenceScreen>